--- a/src/app/app.html
+++ b/src/app/app.html
@@ -8,13 +8,13 @@
         <ion-list>
             <ng-container *ngFor="let group of menu">
                 <ion-list-header>{{group.title}}</ion-list-header>
-                <button ion-item menuClose *ngFor="let item of group.items" (click)="ui.flip(item.name, {}, { animate: false })">
+                <button ion-item menuClose *ngFor="let item of group.items" (click)="ui.swap(item.name, { type: item.type }, { animate: false })">
                     <img [src]="item.icon" /><span [innerHTML]="item.title"></span>
                 </button>
             </ng-container>
-            <ion-item class="version" [innerHTML]="version"></ion-item>
-            <ion-item class="copyright" [innerHTML]="copyright"></ion-item>
         </ion-list>
+        <div class="version" [innerHTML]="version"></div>
+        <div class="copyright" [innerHTML]="copyright"></div>
     </ion-content>
 </ion-menu>
 
