--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -7,24 +7,14 @@ html, body, ion-app, ion-content, ion-page, .nav-decor {
 
 form { display: block; }
 
-@font-face {
-    font-family: 'sofachrome';
-    font-style: normal;
-    font-weight: normal;
-    src: url('../assets/fonts/sofachrome.ttf') format('truetype'), url('../assets/fonts/sofachrome.woff2') format('woff2'), url('../assets/fonts/sofachrome.woff') format('woff');
-}
-@font-face {
-    font-family: 'sofachrome';
-    font-style: italic;
-    font-weight: normal;
-    src: url('../assets/fonts/sofachrome-italic.ttf') format('truetype'), url('../assets/fonts/sofachrome-italic.woff2') format('woff2'), url('../assets/fonts/sofachrome-italic.woff') format('woff');
-}
-
 ion-app.ios { background: transparent; }
 .ios ion-nav > .ion-page > ion-header > .toolbar.statusbar-padding:first-child ion-segment { height: 32px; min-height: 32px; }
 
-ion-menu .content-ios { background-color: #30384a; } 
+ion-menu .content-ios { background-color: #1a2133; } 
 ion-menu ion-list.list-ios {
+
+    margin-bottom: 16px;
+
     .item-ios { 
         background: #30384a; 
         border-bottom-color: #3d4554; 
@@ -35,16 +25,15 @@ ion-menu ion-list.list-ios {
         img { display: inline-block; width: 16px; height: 16px; margin-right: 8px; vertical-align: middle; }
     }
     .item-ios.list-header-ios { background-color: #1a2133;  }
-    .item-ios.version, .item-ios.copyright { font-size: 14px; justify-content: center; text-align: center; } 
 }
 ion-menu ion-list.list-ios .item-block .item-inner { border-bottom-color: #3d4554; }
 ion-menu ion-list.list-ios > .item-block:last-child {
-    border-bottom-color: transparent;
+    border-bottom-color: #3d4554;
 }
 
 ion-header {
     .toolbar-background-ios { background-color: #264e8c; }
-    .toolbar-title-ios { color: #fff; }
+    .toolbar-title-ios { color: #fff; text-transform: capitalize; }
     button.bar-button-ios[icon-only] { border: solid 1px rgba(0,0,0,0.1); padding: 0 16px; }
     button.bar-button-ios[menuToggle] { background: rgba(0,0,0,0.1) url(../assets/images/proc/white16.png) no-repeat center center; }
     button.bar-button-ios.activated { background-color: rgba(255,255,255,0.1); }
@@ -52,6 +41,8 @@ ion-header {
 ion-nav.menu-content-open {
     ion-header button.bar-button-ios[menuToggle] { background-color: rgba(255,255,255,0.1);  }
 }
+
+ion-menu .version, ion-menu .copyright { margin: 16px 0; color: #b4bac6; font-size: 14px; line-height: 20px; text-align: center; }
 
 ion-header.brand {
     /*background: transparent url('../assets/images/brand.png') left center no-repeat;*/
@@ -62,6 +53,28 @@ ion-tabs.brand {
     .tabbar { opacity: 0; }
     .tabbar .tab-button { opacity: 0; }
 }
+
+ion-nav .scroll-content {
+    background: #485570;
+}
+
+ion-nav ion-list.list-ios {
+    margin: 0;
+    /*overflow: hidden;*/
+
+    .item-ios { 
+
+        img { display: inline-block; width: 16px; height: 16px; margin-right: 8px; vertical-align: middle; }
+    }
+    .item-ios.list-header-ios { background-color: #485570; color: #ccc;  }
+}
+ion-nav ion-list.list-ios:not([inset]) + .list-ios:not([inset]) ion-list-header{
+    margin-top: 0;
+}
+/*ion-nav ion-list.list-ios .item-block .item-inner { border-bottom-color: #3d4554; }
+ion-nav ion-list.list-ios > .item-block:last-child {
+    border-bottom-color: #c8c7cc;
+}*/
 
 /*h1 { color: #e84e12; }*/
 p ion-icon { vertical-align: middle; }
@@ -77,6 +90,16 @@ p ion-icon { vertical-align: middle; }
 .loading-ios .loading-wrapper { flex-direction: column; justify-content: center; }
 .loading-ios .loading-spinner + .loading-content { display: block; margin-left: 0; text-align: center; }
 .loading-ios .loading-content .progress { display: block; padding: 16px 0 0; text-align: center; text-indent: 10px; }
+
+.list-header-ios { 
+    position: sticky;
+    top: 0;
+    z-index: 1;
+    border-bottom: none;
+    font-weight: normal;
+    text-transform: capitalize; 
+    ion-label { font-size: 20px; }
+}
 
 select { -webkit-appearance: none; height: 40px; padding: 0 40px 0 8px; border: solid 1px #d8d8d8; overflow-x: hidden; text-overflow: ellipsis; white-space: nowrap; }
 /*.item-select { display: flex; flex-direction: row; }*/
@@ -119,6 +142,24 @@ ion-header ion-toolbar.select .toolbar-content:before, header.select:before, .it
 .item-select [item-content] select[disabled] { color: #d8d8d8; }
 
 header.select select, .item-select [item-content] select { position: relative; z-index: 1; background-color: transparent; }
+
+ion-footer { 
+    background-color: #000;
+    color: #fff;
+    ion-segment.segment-ios {
+        ion-segment-button.segment-button {
+            height: 64px;
+            border: none;
+            color: #fff;
+            img { display: block; width: 24px; height: 24px; margin: 12px auto 0; }
+            ion-label.label-ios { display: block; margin: 0; line-height: 28px; }
+        }
+
+        ion-segment-button.segment-button.segment-activated {
+            background-color: #264e8c;
+        }
+    }
+}
 
 /*# region *ngIf fade-in */
 @keyframes fadein {
