--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -24,7 +24,9 @@ ion-menu ion-list.list-ios {
 
         img { display: inline-block; width: 16px; height: 16px; margin-right: 8px; vertical-align: middle; }
     }
-    .item-ios.list-header-ios { background-color: #1a2133;  }
+    .item-ios.list-header-ios { 
+        background-color: #1a2133; 
+    }
 }
 ion-menu ion-list.list-ios .item-block .item-inner { border-bottom-color: #3d4554; }
 ion-menu ion-list.list-ios > .item-block:last-child {
@@ -32,11 +34,17 @@ ion-menu ion-list.list-ios > .item-block:last-child {
 }
 
 ion-header {
-    .toolbar-background-ios { background-color: #264e8c; }
-    .toolbar-title-ios { color: #fff; text-transform: capitalize; }
-    button.bar-button-ios[icon-only] { border: solid 1px rgba(0,0,0,0.1); padding: 0 16px; }
-    button.bar-button-ios[menuToggle] { background: rgba(0,0,0,0.1) url(../assets/images/proc/white16.png) no-repeat center center; }
-    button.bar-button-ios.activated { background-color: rgba(255,255,255,0.1); }
+    .toolbar-ios {
+        min-height: calc(env(safe-area-inset-top) + 44px);
+        padding-top: calc(env(safe-area-inset-top) + 4px);
+        .toolbar-background-ios {  background-color: #264e8c; }
+        /*.toolbar-ios { margin-top: env(safe-area-inset-top); }*/
+        ion-title { padding-top: env(safe-area-inset-top); }
+        .toolbar-title-ios { height: 34px; color: #fff; line-height: 34px; text-transform: capitalize; }
+        button.bar-button-ios[icon-only] { border: solid 1px rgba(0,0,0,0.1); padding: 0 16px; }
+        button.bar-button-ios[menuToggle] { background: rgba(0,0,0,0.1) url(../assets/images/proc/white16.png) no-repeat center center; }
+        button.bar-button-ios.activated { background-color: rgba(255,255,255,0.1); }
+    }
 }
 ion-nav.menu-content-open {
     ion-header button.bar-button-ios[menuToggle] { background-color: rgba(255,255,255,0.1);  }
@@ -91,14 +99,15 @@ p ion-icon { vertical-align: middle; }
 .loading-ios .loading-spinner + .loading-content { display: block; margin-left: 0; text-align: center; }
 .loading-ios .loading-content .progress { display: block; padding: 16px 0 0; text-align: center; text-indent: 10px; }
 
-.list-header-ios { 
+ion-list-header.list-header-ios { 
     position: sticky;
     top: 0;
     z-index: 1;
+    min-height: 32px;
     border-bottom: none;
     font-weight: normal;
     text-transform: capitalize; 
-    ion-label { font-size: 20px; }
+    ion-label { margin: 0; font-size: 14px; line-height: 32px; }
 }
 
 select { -webkit-appearance: none; height: 40px; padding: 0 40px 0 8px; border: solid 1px #d8d8d8; overflow-x: hidden; text-overflow: ellipsis; white-space: nowrap; }
@@ -148,16 +157,17 @@ ion-footer {
     color: #fff;
     ion-segment.segment-ios {
         ion-segment-button.segment-button {
-            height: 64px;
+            height: 48px;
             border: none;
             color: #fff;
-            img { display: block; width: 24px; height: 24px; margin: 12px auto 0; }
-            ion-label.label-ios { display: block; margin: 0; line-height: 28px; }
+            img { display: block; width: 16px; height: 16px; margin: 10px auto 0; }
+            ion-label.label-ios { display: block; margin: 0; font-size: 11px; line-height: 22px; }
         }
-
+        .segment-button:first-of-type, .segment-button:last-of-type { border-radius: 0; }
         ion-segment-button.segment-button.segment-activated {
             background-color: #264e8c;
         }
+
     }
 }
 
