--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -24,6 +24,7 @@ ion-menu ion-list.list-ios {
 
         img { display: inline-block; width: 16px; height: 16px; margin-right: 8px; vertical-align: middle; }
     }
+    .item-ios.active { background-color: #485570; }
     .item-ios.list-header-ios { 
         background-color: #1a2133; 
     }
@@ -42,8 +43,11 @@ ion-header {
         ion-title { padding-top: env(safe-area-inset-top); }
         .toolbar-title-ios { height: 34px; color: #fff; line-height: 34px; text-transform: capitalize; }
         button.bar-button-ios[icon-only] { border: solid 1px rgba(0,0,0,0.1); padding: 0 16px; }
-        button.bar-button-ios[menuToggle] { background: rgba(0,0,0,0.1) url(../assets/images/proc/white16.png) no-repeat center center; }
-        button.bar-button-ios.activated { background-color: rgba(255,255,255,0.1); }
+        button.bar-button-menutoggle-ios, button.bar-button-ios[menuToggle] { margin: 0; background: rgba(0,0,0,0.1) url(../assets/images/proc/white16.png) no-repeat center center; }
+        button.bar-button-ios.activated, button.bar-button-ios:focus { background-color: rgba(255,255,255,0.1); opacity: 1; }
+        button.bar-button-clear-ios { color: #fff; }
+        button.bar-button-outline-ios { min-width: 54px; background-color: rgba(0,0,0,0.1); border-color: rgba(0,0,0,0.1); color: #fff; }
+        
     }
 }
 .platform-android.platform-mobile {
@@ -180,7 +184,8 @@ ion-footer {
                 border: none;
                 color: #fff;
             
-                img { display: block; width: auto; height: 16px; margin: 10px auto 0; }
+                /*img { display: block; width: auto; height: 16px; margin: 10px auto 0; }*/
+                img { display: block; width: auto; height: 24px; margin: 8px auto 0; }
 
                 ion-label.label-ios { display: block; margin: 0; font-size: 11px; line-height: 22px; }
             }
@@ -192,6 +197,7 @@ ion-footer {
         }
     }
 }
+.ios ion-footer .toolbar:last-child { min-height: 54px; }
 
 /*# region *ngIf fade-in */
 @keyframes fadein {
