--- a/src/app/app.html
+++ b/src/app/app.html
@@ -13,7 +13,7 @@
                 </button>
             </ng-container>
         </ion-list>
-        <div class="version" [innerHTML]="version"></div>
+        <div class="version">Version <span [innerHTML]="ui.version"></span></div>
         <div class="copyright" [innerHTML]="copyright"></div>
     </ion-content>
 </ion-menu>
